# starlet

./: .gitignore  DEVELOPMENT.md  HANDOFF.md  OPTIMIZATION_RESULTS.md  README.md  RELEASE.md  logs_NE_countries.txt  pyproject.toml  quick_test_mvt.py  starlet.toml.example  test_style_conversation.py
.github/scripts/: run_benchmark.py
.github/workflows/: publish.yml
.playwright-mcp/: page-2026-06-16T22-12-04-658Z.yml  page-2026-06-16T22-12-13-183Z.yml  page-2026-06-16T22-17-07-152Z.yml  page-2026-06-16T22-17-12-754Z.yml  page-2026-06-16T22-17-25-280Z.yml  page-2026-06-16T22-18-50-871Z.yml  page-2026-06-16T22-25-34-712Z.yml
bench/: bench_queryable.py  bench_serving.py  make_figures.py  pruning_effectiveness.py  query_dense.py  run_v2_campaign.sh  v2_monitor.sh  verify_tile_fix.py
bench/results_v2/: RESULTS_v2.md  queryable_stats.txt
bench_scratch/: rerun_best.sh  rerun_v3.sh
benchmarks/: run_starlet_benchmark.py
docs/: DEPLOYMENT.md  on-demand-tile-serving.md
starlet/: __init__.py  _cli.py  _types.py
starlet/_internal/: _parallel.py  config.py
starlet/_internal/histogram/: hist_pyramid.py  loader.py
starlet/_internal/mvt/: assigner.py  generator.py  helpers.py  intermediate_tile.py  mvt_generator.py  renderer.py
starlet/_internal/pmtiles/: __init__.py  exporter.py
starlet/_internal/server/: README.md  app.py  download_service.py  (+1 more)
tests/: test_public_api.py
tests/test_mvt/: test_dataset_generator.py  test_intermediate_tile.py
tests/test_stats/: test_merge.py
tests/test_tiling/: test_datasource.py  test_orchestrator.py  test_rsgrove.py
(+29 files in other folders)
